[package]
name = "anyrun-custom-command"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
anyrun-plugin = { git = "https://github.com/anyrun-org/anyrun" }
abi_stable = "0.11.1"
ron = "0.11.0"
serde = { version = "1.0.226", features = ["derive"] }
